--- a/explore/inspect_experiments.ipynb
+++ b/explore/inspect_experiments.ipynb
@@ -70,10 +70,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DotMap(best_bo_score=array([0.3096006 , 0.3096006 , 0.3096006 , 0.3095962 , 0.3095962 ,\n",
+       "       0.3095962 , 0.3095962 , 0.3095962 , 0.3095962 , 0.3095962 ,\n",
+       "       0.3095962 , 0.3095962 , 0.30959398, 0.30959398, 0.30959398,\n",
+       "       0.30959398, 0.30959398, 0.30959398, 0.30959398, 0.30959398,\n",
+       "       0.30959398, 0.30959398, 0.30959398, 0.30959398, 0.30959398,\n",
+       "       0.30959398, 0.30959398, 0.30959398, 0.30959398, 0.30959398],\n",
+       "      dtype=float32), cv_score_mean=array([0.3096006 , 0.30969995, 0.3097689 , 0.3095962 , 0.3097689 ,\n",
+       "       0.3097689 , 0.3097689 , 0.30976707, 0.309697  , 0.30974796,\n",
+       "       0.3097689 , 0.3097654 , 0.30959398, 0.3097689 , 0.3097687 ,\n",
+       "       0.30960742, 0.30959398, 0.3097689 , 0.3097039 , 0.30976772,\n",
+       "       0.3097685 , 0.30959398, 0.30959398, 0.30959398, 0.30959398,\n",
+       "       0.30959398, 0.3097689 , 0.30972582, 0.3097689 , 0.30975297],\n",
+       "      dtype=float32), cv_score_std=array([0.05583105, 0.05594487, 0.05602408, 0.05582604, 0.05602408,\n",
+       "       0.05602408, 0.05602408, 0.05602199, 0.0559416 , 0.05600001,\n",
+       "       0.05602408, 0.05602001, 0.05582351, 0.05602408, 0.05602384,\n",
+       "       0.05583888, 0.05582351, 0.05602408, 0.05594944, 0.05602271,\n",
+       "       0.0560236 , 0.05582351, 0.05582351, 0.05582351, 0.05582351,\n",
+       "       0.05582351, 0.05602408, 0.05597458, 0.05602408, 0.05600578],\n",
+       "      dtype=float32), lambda_reg=array([0.09618533, 0.09618533, 0.09618533, 0.09868317, 0.09868317,\n",
+       "       0.09868317, 0.09868317, 0.09868317, 0.09868317, 0.09868317,\n",
+       "       0.09868317, 0.09868317, 0.1       , 0.1       , 0.1       ,\n",
+       "       0.1       , 0.1       , 0.1       , 0.1       , 0.1       ,\n",
+       "       0.1       , 0.1       , 0.1       , 0.1       , 0.1       ,\n",
+       "       0.1       , 0.1       , 0.1       , 0.1       , 0.1       ],\n",
+       "      dtype=float32))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_log.seed_default.stats"
+   ]
   },
   {
    "cell_type": "code",
