--- a/explore/model_playground.ipynb
+++ b/explore/model_playground.ipynb
@@ -51,36 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(0.3097689, 0.056024082)"
+       "DeviceArray(0.20087245, dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from encoding_models.ols import fit_linear_model\n",
-    "\n",
-    "fit_linear_model({\"lambda_reg\": 0.0}, X, y, 10)"
+    "from encoding_models.ols import fit_linear_model, predict_linear_model\n",
+    "import numpy as np\n",
+    "model_config = {\"lambda_reg\": 0.0}\n",
+    "model_params = fit_linear_model(model_config, X, y)\n",
+    "y_pred = predict_linear_model(model_params, X)\n",
+    "np.mean((y-y_pred)**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,41 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation loss decreased (inf --> 0.238286).  Saving model ...\n",
-      "Validation loss decreased (0.238286 --> 0.236586).  Saving model ...\n",
-      "Validation loss decreased (0.236586 --> 0.236261).  Saving model ...\n",
-      "Validation loss decreased (0.236261 --> 0.236028).  Saving model ...\n",
-      "Validation loss decreased (0.236028 --> 0.235836).  Saving model ...\n",
-      "Validation loss decreased (0.235836 --> 0.235629).  Saving model ...\n",
-      "Validation loss decreased (0.235629 --> 0.235312).  Saving model ...\n",
-      "Validation loss decreased (0.235312 --> 0.235244).  Saving model ...\n",
-      "EarlyStopping counter: 1 out of 7\n",
-      "EarlyStopping counter: 2 out of 7\n",
-      "EarlyStopping counter: 3 out of 7\n",
-      "EarlyStopping counter: 4 out of 7\n",
-      "EarlyStopping counter: 5 out of 7\n",
-      "EarlyStopping counter: 6 out of 7\n",
-      "EarlyStopping counter: 7 out of 7\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.23524418473243713"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dojo.train(15)"
    ]
