--- a/explore/model_playground.ipynb
+++ b/explore/model_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.helper import get_encoding_data"
+    "import numpy as np\n",
+    "from utils.helper import get_encoding_data\n",
+    "from utils.evaluate import evaluation_metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +37,7 @@
        "(1000, 232)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,78 +52,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray(0.20087245, dtype=float32)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from encoding_models.ols import fit_linear_model, predict_linear_model\n",
-    "import numpy as np\n",
-    "model_config = {\"lambda_reg\": 0.0}\n",
-    "model_params = fit_linear_model(model_config, X, y)\n",
-    "y_pred = predict_linear_model(model_params, X)\n",
-    "np.mean((y-y_pred)**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from encoding_models.networks.body_builder import BodyBuilder\n",
-    "from encoding_models.networks.train_dojo import TrainDojo\n",
-    "from encoding_models.networks.data_loader import get_train_test_split_loaders\n",
-    "from encoding_models.networks.optimizer import set_optimizer\n",
-    "\n",
-    "net_config = {\"input_dim\": (1, X.shape[1]),\n",
-    "              \"layers_info\": [[\"flatten\"],\n",
-    "                              [\"linear\", 256, True],\n",
-    "                              [\"linear\", 256, True],\n",
-    "                              [\"linear\", 256, True],\n",
-    "                              [\"linear\", y.shape[1], True]],\n",
-    "              \"output_act\": \"identity\",\n",
-    "              \"hidden_act\": \"relu\",\n",
-    "              \"dropout\": 0.0,\n",
-    "              \"batch_norm\": False}\n",
-    "\n",
-    "network = BodyBuilder(**net_config)\n",
-    "optimizer = set_optimizer(network, \"Adam\", 3e-4)\n",
-    "criterion = nn.MSELoss()\n",
-    "train_loader, test_loader = get_train_test_split_loaders(X, y, 0.1, batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dojo = TrainDojo(network, optimizer, criterion,\n",
-    "                 train_loader, test_loader,\n",
-    "                 log_batch_interval=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dojo.train(15)"
+    "# Gradient Boosted Trees (Sklearn Version)"
    ]
   },
   {
@@ -130,6 +64,125 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Elastic Net (Penalized Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rtl/anaconda2/envs/ma-vision/lib/python3.6/site-packages/sklearn/utils/validation.py:72: FutureWarning: Pass l1_ratio=0.5 as keyword args. From version 1.0 (renaming of 0.25) passing these as positional arguments will result in an error\n",
+      "  \"will result in an error\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(6.414031145934629e-26, 0.2367415187446194, 0.38535971392203006)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from encoding_models.elastic_net import fit_elastic_net, predict_elastic_net\n",
+    "model_config = {\"alpha\": 1, \"l1_ratio\": 0.5}\n",
+    "model_params = fit_elastic_net(model_config, X, y)\n",
+    "y_pred = predict_elastic_net(model_params, X)\n",
+    "# mse, mae, corr\n",
+    "evaluation_metrics(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.38924645279404424, DeviceArray(0.20087245, dtype=float32), 0.35298052)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from encoding_models.ols import fit_linear_model, predict_linear_model\n",
+    "model_config = {\"lambda_reg\": 0.0}\n",
+    "model_params = fit_linear_model(model_config, X, y)\n",
+    "y_pred = predict_linear_model(model_params, X)\n",
+    "# mse, mae, corr\n",
+    "evaluation_metrics(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi-Output MLP Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from encoding_models.ols import fit_mlp_model, predict_mlp_model\n",
+    "model_config = {\"num_hidden_layers\": 2,\n",
+    "                \"num_hidden_units\": 64,\n",
+    "                \"hidden_act\": \"relu\",\n",
+    "                \"optimizer_class\": \"Adam\",\n",
+    "                \"learnin\"}\n",
+    "model_params = fit_mlp_model(model_config, X, y)\n",
+    "y_pred = predict_mlp_model(model_params, X)\n",
+    "# mse, mae, corr\n",
+    "evaluation_metrics(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\"num_hidden_layers\": [1, 2, 3, 4],\n",
+    "     \"num_hidden_units\": [64, 128, 256, 512],\n",
+    "     \"hidden_act\": [\"relu\", \"prelu\", \"leaky_relu\", \"elu\"],\n",
+    "     \"optimizer_class\": [\"Adam\", \"RMSprop\"],\n",
+    "     \"learning_rate\": [1e-05, 5e-05, 1e-04, 5e-04, 1e-03],\n",
+    "     \"w_decay\": [0.0, 1e-07, 1e-06, 1e-05],\n",
+    "     \"dropout\": [0.0, 0.1, 0.2]}"
+   ]
   }
  ],
  "metadata": {
