Restructure + new configs

--- a/notebooks/model_playground.ipynb
+++ b/notebooks/model_playground.ipynb
@@ -55,6 +55,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Teapot (Evolutionary Algorithm) - Run long with many features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Gradient Boosted Trees (Sklearn Version)"
    ]
   },
@@ -153,35 +167,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.13267876685477542, 0.23266148782750287, 0.38203988972485065)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from encoding_models.ols import fit_mlp_model, predict_mlp_model\n",
+    "from encoding_models.mlp_networks import fit_mlp_model, predict_mlp_model\n",
     "model_config = {\"num_hidden_layers\": 2,\n",
     "                \"num_hidden_units\": 64,\n",
     "                \"hidden_act\": \"relu\",\n",
     "                \"optimizer_class\": \"Adam\",\n",
-    "                \"learnin\"}\n",
+    "                \"learning_rate\": 3e-04,\n",
+    "                \"w_decay\": 1e-07,\n",
+    "                \"dropout\": 0.0}\n",
     "model_params = fit_mlp_model(model_config, X, y)\n",
     "y_pred = predict_mlp_model(model_params, X)\n",
     "# mse, mae, corr\n",
     "evaluation_metrics(y, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\"num_hidden_layers\": [1, 2, 3, 4],\n",
-    "     \"num_hidden_units\": [64, 128, 256, 512],\n",
-    "     \"hidden_act\": [\"relu\", \"prelu\", \"leaky_relu\", \"elu\"],\n",
-    "     \"optimizer_class\": [\"Adam\", \"RMSprop\"],\n",
-    "     \"learning_rate\": [1e-05, 5e-05, 1e-04, 5e-04, 1e-03],\n",
-    "     \"w_decay\": [0.0, 1e-07, 1e-06, 1e-05],\n",
-    "     \"dropout\": [0.0, 0.1, 0.2]}"
    ]
   }
  ],
