GradBoosting Encoding Model

--- a/notebooks/model_playground.ipynb
+++ b/notebooks/model_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "(1000, 232)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,14 +48,15 @@
     "                                 layer_id=\"layer_1\",\n",
     "                                 subject_id=\"sub01\",\n",
     "                                 roi_type=\"V1\")\n",
-    "y.shape"
+    "X_train, X_val = X[:900], X[900:]\n",
+    "y_train, y_val = y[:900], y[900:]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Teapot (Evolutionary Algorithm) - Run long with many features"
+    "# Teapot (Evolutionary Algorithm) - No BO Needed!"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Boosted Trees (Sklearn Version)"
+    "# Gradient Boosted Trees - Sklearn Version"
    ]
   },
   {
@@ -77,46 +78,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from encoding_models.trees import fit_gradboost_model, predict_gradboost_model\n",
+    "model_config = {\"alpha\": 0.05, \"learning_rate\": 0.05, \"max_depth\": 10, \"n_estimators\": 50}\n",
+    "model_params = fit_gradboost_model(model_config, X_train, y_train)\n",
+    "y_pred = predict_gradboost_model(model_params, X_val)\n",
+    "# corr, mse, mae\n",
+    "evaluation_metrics(y_val, y_pred)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elastic Net (Penalized Regression)"
+    "# Elastic Net - Penalized Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rtl/anaconda2/envs/ma-vision/lib/python3.6/site-packages/sklearn/utils/validation.py:72: FutureWarning: Pass l1_ratio=0.5 as keyword args. From version 1.0 (renaming of 0.25) passing these as positional arguments will result in an error\n",
-      "  \"will result in an error\", FutureWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(6.414031145934629e-26, 0.2367415187446194, 0.38535971392203006)"
+       "(0.1370565067476729, 0.25007557346167286, 0.3961864815989181)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from encoding_models.elastic_net import fit_elastic_net, predict_elastic_net\n",
-    "model_config = {\"alpha\": 1, \"l1_ratio\": 0.5}\n",
-    "model_params = fit_elastic_net(model_config, X, y)\n",
-    "y_pred = predict_elastic_net(model_params, X)\n",
-    "# mse, mae, corr\n",
-    "evaluation_metrics(y, y_pred)"
+    "model_config = {\"alpha\": 0.025, \"l1_ratio\": 0.5}\n",
+    "model_params = fit_elastic_net(model_config, X_train, y_train)\n",
+    "y_pred = predict_elastic_net(model_params, X_val)\n",
+    "# corr, mse, mae\n",
+    "evaluation_metrics(y_val, y_pred)"
    ]
   },
   {
@@ -152,10 +152,10 @@
    "source": [
     "from encoding_models.ols import fit_linear_model, predict_linear_model\n",
     "model_config = {\"lambda_reg\": 0.0}\n",
-    "model_params = fit_linear_model(model_config, X, y)\n",
-    "y_pred = predict_linear_model(model_params, X)\n",
-    "# mse, mae, corr\n",
-    "evaluation_metrics(y, y_pred)"
+    "model_params = fit_linear_model(model_config, X_train, y_train)\n",
+    "y_pred = predict_linear_model(model_params, X_val)\n",
+    "# corr, mse, mae\n",
+    "evaluation_metrics(y_val, y_pred)"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "                \"dropout\": 0.0}\n",
     "model_params = fit_mlp_model(model_config, X, y)\n",
     "y_pred = predict_mlp_model(model_params, X)\n",
-    "# mse, mae, corr\n",
+    "# corr, mse, mae\n",
     "evaluation_metrics(y, y_pred)"
    ]
   }
