Dim Red. Explore + Restructure

--- a/notebooks/model_playground.ipynb
+++ b/notebooks/model_playground.ipynb
@@ -75,9 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.08204222318962938, 0.26505313191777513, 0.40837804329311156)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from encoding_models.trees import fit_gradboost_model, predict_gradboost_model\n",
     "model_config = {\"alpha\": 0.05, \"learning_rate\": 0.05, \"max_depth\": 10, \"n_estimators\": 50}\n",
@@ -128,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -141,10 +152,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.38924645279404424, DeviceArray(0.20087245, dtype=float32), 0.35298052)"
+       "(0.07998744740767788, DeviceArray(0.32005557, dtype=float32), 0.43471348)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.13267876685477542, 0.23266148782750287, 0.38203988972485065)"
+       "(0.0898770722254375, 0.2556076024462942, 0.4001329879328703)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,10 +201,10 @@
     "                \"learning_rate\": 3e-04,\n",
     "                \"w_decay\": 1e-07,\n",
     "                \"dropout\": 0.0}\n",
-    "model_params = fit_mlp_model(model_config, X, y)\n",
-    "y_pred = predict_mlp_model(model_params, X)\n",
+    "model_params = fit_mlp_model(model_config, X_train, y_train)\n",
+    "y_pred = predict_mlp_model(model_params, X_val)\n",
     "# corr, mse, mae\n",
-    "evaluation_metrics(y, y_pred)"
+    "evaluation_metrics(y_val, y_pred)"
    ]
   }
  ],
