New configs + visualization

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -37,28 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_dir = \"../experiments/mlp_alexnet_bo_20\"\n",
-    "meta_log, hyper_log = load_result_logs(experiment_dir)\n",
-    "\n",
-    "meta_log = load_meta_log(\"../experiments/mlp_vgg_bo_50/meta_log.hdf5\")"
+    "experiment_dir = \"../experiments/wb/elastic_vgg_bo_15\"\n",
+    "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'experiments/mlp_vgg_bo_30/21-05-31_b_1_eval_0/'"
+       "'experiments/wb/elastic_vgg_bo_15/21-06-02_b_1_eval_0/'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "track = \"mini_track\"\n",
+    "track = \"full_track\"\n",
     "if track == 'full_track': ROIs = ['WB']\n",
     "else: ROIs = ['LOC','FFA','STS','EBA','PPA','V1','V2','V3','V4']\n",
     "\n",
@@ -110,12 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['WB'])\n",
+      "dict_keys(['sub01', 'sub02', 'sub03', 'sub04', 'sub05', 'sub06', 'sub07', 'sub08', 'sub09', 'sub10'])\n",
+      "(102, 18222)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.keys())\n",
+    "print(results['WB'].keys())\n",
+    "print(results['WB']['sub01'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-02_mlp_vgg_bo_50\"\n",
+    "model_name = \"2021-06-03_elastic_vgg_bo_50\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
