--- a/notebooks/fmri_data.ipynb
+++ b/notebooks/fmri_data.ipynb
@@ -255,6 +255,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOC     13244\n",
+       "FFA      1100\n",
+       "STS      2682\n",
+       "EBA      2404\n",
+       "PPA      2207\n",
+       "V1       2473\n",
+       "V2       2360\n",
+       "V3       2248\n",
+       "V4        905\n",
+       "WB     161326\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roi_voxels.sum(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
