--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,26 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_dir = \"../experiments/wb/elastic_vgg_bo_15\"\n",
+    "#experiment_dir = \"../experiments/roi/elastic_resnet50_bo_50\"\n",
+    "experiment_dir = \"../experiments/wb/elastic_resnet50_bo_50\"\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'experiments/wb/elastic_vgg_bo_15/21-06-02_b_1_eval_0/'"
+       "'experiments/wb/elastic_resnet50_bo_50/21-06-03_b_1_eval_0/'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,12 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-03_elastic_vgg_bo_50\"\n",
+    "model_name = \"2021-06-04_elastic_resnet50_bo_50\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
