VoneNet Feature Extraction

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -37,27 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "#experiment_dir = \"../experiments/roi/elastic_resnet50_bo_50\"\n",
-    "experiment_dir = \"../experiments/wb/elastic_resnet50_bo_50\"\n",
+    "#experiment_dir = \"../experiments/wb/elastic_resnet50_bo_15\"\n",
+    "\n",
+    "#experiment_dir = \"../experiments/roi/elastic_efficientnet_b3_bo_50\"\n",
+    "#experiment_dir = \"../experiments/wb/elastic_efficientnet_b3_bo_50\"\n",
+    "\n",
+    "#experiment_dir = \"../experiments/roi/elastic_resnext50_32x4d_bo_50\"\n",
+    "# experiment_dir = \"../experiments/wb/elastic_resnext50_32x4d_bo_50\"\n",
+    "#experiment_dir = \"../data/experiments/roi/mlp_efficientnet_b3_bo_50\"\n",
+    "experiment_dir = \"../data/experiments/wb/mlp_efficientnet_b3_bo_30\"\n",
+    "\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'experiments/wb/elastic_resnet50_bo_50/21-06-03_b_1_eval_0/'"
+       "'experiments/wb/mlp_efficientnet_b3_bo_30/21-06-05_b_1_eval_0/'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +105,7 @@
     "        # experiment_dir = hyper_sub_roi.experiment_dir.iloc[0]\n",
     "        eval_id = hyper_sub_roi.run_id.iloc[0]\n",
     "        experiment_dir = meta_log[eval_id].meta.experiment_dir\n",
-    "        mypath = os.path.join(\"../\" + experiment_dir, \"extra\")\n",
+    "        mypath = os.path.join(\"../data/\" + experiment_dir, \"extra\")\n",
     "        try:\n",
     "            sub_roi_layer = [f for f in os.listdir(mypath) if os.path.isfile(os.path.join(mypath, f))]\n",
     "            ROI_result = np.load(mypath + \"/\" + sub_roi_layer[0])\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -130,12 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-04_elastic_resnet50_bo_50\"\n",
+    "model_name = \"2021-06-07_mlp_efficientnet_b3_bo_50\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
