Loading of ROI best predictions

--- a/notebooks/manual_submit.ipynb
+++ b/notebooks/manual_submit.ipynb
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mle_toolbox import load_result_logs\n",
-    "from mle_toolbox.utils import load_meta_log"
+    "from mle_toolbox.utils import load_meta_log\n",
+    "from utils.helper import get_best_roi_models, zip, save_dict"
    ]
   },
   {
@@ -52,7 +53,9 @@
     "#experiment_dir = \"../data/experiments/roi/mlp_efficientnet_b3_bo_50\"\n",
     "#experiment_dir = \"../data/experiments/wb/mlp_efficientnet_b3_bo_30\"\n",
     "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_bo_50\"\n",
-    "experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_bo_30\"\n",
+    "#experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_bo_30\"\n",
+    "#experiment_dir = \"../data/experiments/roi/elastic_vone_resnet50_at_bo_50\"\n",
+    "experiment_dir = \"../data/experiments/wb/elastic_vone_resnet50_at_bo_30\"\n",
     "\n",
     "meta_log, hyper_log = load_result_logs(experiment_dir)"
    ]
@@ -65,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "'experiments/wb/elastic_vone_resnet50_bo_30/21-06-12_b_1_eval_0/'"
+       "'experiments/wb/elastic_vone_resnet50_at_bo_30/21-06-13_b_1_eval_0/'"
       ]
      },
      "execution_count": 10,
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,34 +149,12 @@
    "outputs": [],
    "source": [
     "# Create model_submission sub directory\n",
-    "model_name = \"2021-06-13_elastic_vone_resnet50_bo_50\"\n",
+    "model_name = \"2021-06-14_elastic_vone_resnet50_at_bo_50\"\n",
     "sub_dir = f\"../data/submissions/{model_name}/{track}/\"\n",
     "if not os.path.exists(sub_dir):\n",
     "    os.makedirs(sub_dir)\n",
     "    \n",
-    "from utils.helper import save_dict\n",
-    "save_dict(results, sub_dir + track + \".pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zipfile\n",
-    "\n",
-    "def zip(src, dst):\n",
-    "    zf = zipfile.ZipFile(dst, \"w\", zipfile.ZIP_DEFLATED)\n",
-    "    abs_src = os.path.abspath(src)\n",
-    "    for dirname, subdirs, files in os.walk(src):\n",
-    "        for filename in files:\n",
-    "            absname = os.path.abspath(os.path.join(dirname, filename))\n",
-    "            arcname = absname[len(abs_src) + 1:]\n",
-    "            if arcname in [\"mini_track.pkl\", \"full_track.pkl\"]:\n",
-    "                zf.write(absname, arcname)\n",
-    "    zf.close()\n",
-    "\n",
+    "save_dict(results, sub_dir + track + \".pkl\")\n",
     "zip(sub_dir, sub_dir + track + \".zip\")"
    ]
   },
@@ -227,6 +208,117 @@
     "#     os.makedirs(dirpath)\n",
     "#     np.save(save_fname , y_pred)\n",
     "#     print(e_id, save_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Construct ROI Submission from Invidually Best Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi_paths = get_best_roi_models('../best_roi_models.json', prepend=\"../data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DotMap(V1=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), V2=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V3=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), V4=DotMap(path='../data/experiments/roi/elastic_resnet50_bo_50', model='elastic_net'), LOC=DotMap(path='../data/experiments/mlp_vgg_bo_30', model='mlp_network'), EBA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), FFA=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), STS=DotMap(path='../data/experiments/roi/mlp_efficientnet_b3_bo_50', model='elastic_net'), PPA=DotMap(path='../data/experiments/roi/elastic_vone_resnet50_bo_50', model='elastic_net'), _ipython_display_=DotMap(), _repr_mimebundle_=DotMap())"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roi_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ROI - Subject ID\n",
+    "\n",
+    "ROIs = ['LOC', 'FFA','STS','EBA','PPA','V1','V2','V3','V4']\n",
+    "\n",
+    "all_subjects = ['sub01', 'sub02', 'sub03', 'sub04', 'sub05',\n",
+    "                'sub06', 'sub07', 'sub08', 'sub09', 'sub10']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOC\n",
+      "FFA\n",
+      "STS\n",
+      "EBA\n",
+      "PPA\n",
+      "V1\n",
+      "V2\n",
+      "V3\n",
+      "V4\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = {}\n",
+    "for ROI in ROIs:\n",
+    "    print(ROI)\n",
+    "    experiment_dir = roi_paths[ROI][\"path\"]\n",
+    "    meta_log, hyper_log = load_result_logs(experiment_dir)\n",
+    "    ROI_results = {}\n",
+    "    for sub in all_subjects:\n",
+    "        hyper_sub = hyper_log[hyper_log.subject_id == sub]\n",
+    "        hyper_sub_roi = hyper_sub[hyper_sub.roi_type == ROI]\n",
+    "        # experiment_dir = hyper_sub_roi.experiment_dir.iloc[0]\n",
+    "        eval_id = hyper_sub_roi.run_id.iloc[0]\n",
+    "        experiment_dir = meta_log[eval_id].meta.experiment_dir\n",
+    "        mypath = os.path.join(\"../data/\" + experiment_dir, \"extra\")\n",
+    "        try:\n",
+    "            sub_roi_layer = [f for f in os.listdir(mypath) if os.path.isfile(os.path.join(mypath, f))]\n",
+    "            ROI_result = np.load(mypath + \"/\" + sub_roi_layer[0])\n",
+    "            ROI_results[sub] = ROI_result\n",
+    "        except:\n",
+    "            print(mypath)\n",
+    "            continue\n",
+    "    results[ROI] = ROI_results    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create model_submission sub directory\n",
+    "model_name = \"2021-06-15_combined\"\n",
+    "sub_dir = f\"../data/submissions/{model_name}/mini-track/\"\n",
+    "if not os.path.exists(sub_dir):\n",
+    "    os.makedirs(sub_dir)\n",
+    "    \n",
+    "save_dict(results, sub_dir + track + \".pkl\")\n",
+    "zip(sub_dir, sub_dir + track + \".zip\")"
    ]
   }
  ],
